# OOP_lab3

./: CMakeLists.txt  README.MD  main.cpp
include/: figures.hpp
src/: figures.cpp
tests/: test_figures.cpp
